Rest of changes for Route/Stop views.

--- a/MagicBus/AndroidManifest.xml
+++ b/MagicBus/AndroidManifest.xml
@@ -14,6 +14,7 @@
         </activity>
         <activity android:name=".RouteView" />
         <activity android:name=".StopView" />
+        <activity android:name=".StopDetailsView" />
         <activity android:name=".FavoritesView" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
