--- a/MagicBus/AndroidManifest.xml
+++ b/MagicBus/AndroidManifest.xml
@@ -3,8 +3,10 @@
       package="edu.umich.android.magicbus"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar">
+    <application android:icon="@drawable/icon" 
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar" 
+        android:debuggable="true">
         <activity android:name=".MainView"
                   android:label="@string/app_name">
             <intent-filter>
