--- a/MagicBus/AndroidManifest.xml
+++ b/MagicBus/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="edu.umich.android.magicbus"
+      package="edu.umich.mbus.android"
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" 
