--- a/MagicBus/AndroidManifest.xml
+++ b/MagicBus/AndroidManifest.xml
@@ -20,4 +20,6 @@
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest> 
