--- a/MagicBus/AndroidManifest.xml
+++ b/MagicBus/AndroidManifest.xml
@@ -37,6 +37,7 @@ along with MBus.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name=".RouteView" />
         <activity android:name=".StopView" />
         <activity android:name=".StopDetailsView" />
+        <activity android:name=".HelpView" />
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"/>
